# SampleMind-AI---Beta

./: .aliases  .auto-start-alias.sh  .codespellrc  .coveragerc  .editorconfig  .env.development  .env.example  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  AI_PROVIDER_DECISION_GUIDE.md  ANALYSIS_REPORT_2025.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_ENHANCED.md  ASSISTANT_UI_QUICK_START.md  AUTO_START_COMPLETE.md  AUTO_START_FLOW_DIAGRAM.md  AUTO_START_README.md  AUTO_START_SUMMARY.md  BETA_POLISH_SUMMARY.md  BETA_RELEASE.md  BETA_RELEASE_CHECKLIST.md  BETA_RELEASE_GUIDE.md  BETA_RELEASE_READY.md  BETA_RELEASE_SUMMARY.md  BETA_WEBSITE_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_COMPLETE.md  CODE_OF_CONDUCT.md  CODE_QUALITY_REPORT.md  COMMIT_TONIGHT.sh  COMPREHENSIVE_REFACTORING_INDEX.md  COMPREHENSIVE_TODO_LIST.md  CONTRIBUTING.md  CROSS_PLATFORM_FILE_PICKER.md  DEPLOY.md  (+101 more)
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  copilot-instructions.md  dependabot.yml  instructions
.kilocode/: mcp.json
.mcp/: config.json
.test_favorites/: test_collection.json
.test_sessions/: 31ddb1f7.json  fcd2e2fc.json
DIAGNOSTICS_REPORT_20260409_231054/: 02_dependencies.txt  05_mypy_types.txt
DIAGNOSTICS_REPORT_20260409_232644/: 04_format_check.txt  06_test_discovery.txt  07_unit_tests.txt  08_validation_scripts.txt  10_config_analysis.txt  FULL_DIAGNOSTICS.txt
DOCUMENTS/: 01_MODEL_STACK.md  03_SampleMind_Product_Features_UX.md  04_SampleMind_Marketing_Growth_Strategy.md  05_SampleMind_Financial_Model_Investment.md  06_SampleMind_Implementation_Roadmap.md  API_INTEGRATION_COMPLETE.md  AUDIO_ENDPOINTS_COMPLETE.md  CODEBASE_AUDIT_COMPLETE_OCT19.md  DESIGN_INSPIRATION_SOURCES.md  INSTALL_TROUBLESHOOTING.md  MASTER_BLUEPRINT.md  PHASE3_PAGES_COMPLETE.md  README.md  SAMPLEMIND_AI_COMPREHENSIVE_SUMMARY.md  SAMPLEMIND_AI_REPLIT_AGENT_3_MASTER_PROMPT.md  SAMPLEMIND_PHASE2_3D_VISUALIZATIONS_PART2.md  SAMPLEMIND_PHASE2_UI_ADVANCED.md  SAMPLEMIND_TECHNICAL_IMPLEMENTATION_ROADMAP_2025-2027.md  SESSION_SUMMARY_OCT19_EVENING.md  TASK_LIST_2025-10-19.md
_archive/: ANALYSIS_REPORT_2025.md  ANTHROPIC_INTEGRATION_SUMMARY.md  API_AUDIO_COMPLETION_LOG.md  CODEBASE_ANALYSIS_COMPLETE.md  CROSS_PLATFORM_COMPLETE.md  FRONTEND_VERIFICATION_REPORT.md  GITHUB_SETUP_READY.md  INDEX.md  PHASE4_INTEGRATION_LOG.md  PHASE5_CLOUD_SYNC_LOG.md  PHASE_15_COMPLETE.md  PHASE_16_COMPLETE.md  PHASE_17_COMPLETE.md  PHASE_17_WEB_UI_ANALYSIS.md  PHASE_18_START.md  PROGRESS_REPORT.md  README-GITHUB.md  SETUP_COMPLETE.md  START_HERE.md  TASKS_1_2_COMPLETE.md  TASK_3_COMPLETE.md  TASK_5_FOUNDATION_COMPLETE.md  TASK_6_COMPLETE.md  TASK_7_COMPLETE.md  ULTRA_ANALYSIS_COMPLETE.md  VISUAL_PROJECT_OVERVIEW.md  current_docs_validation.md  main_enhanced.py
alembic/: env.py
app/: package.json  svelte.config.js  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
backend/: .env.example  README.md  RUN_TESTS.md  TEST_AUDIO.md  TEST_AUTH.md  TEST_WEBSOCKET.md  alembic.ini  main.py  requirements-full.txt  requirements-minimal.txt  requirements.txt  test_api.html
benchmarks/: audio_benchmark.py  audio_effects_benchmark.py  requirements-benchmark.txt  run_benchmarks.py  vector_store_benchmark.py
cli/: package-lock.json  package.json  tsconfig.json
config/: .env.production.example
deployment/: .env.example  deploy.sh
desktop/: README.md  package-lock.json  package.json
docs/: ADVANCED_CYBERPUNK_UI_ROADMAP.md  AI_ARCHITECTURE_RESEARCH_SYNTHESIS.md  AI_CHAT_PHASE1_COMPLETE.md  AI_COPILOT_ARCHITECTURE_RESEARCH.md  AI_DESIGN_SYSTEM_INTEGRATION_GUIDE.md  AI_MODELS_QUICK_REFERENCE.md  AI_TOOL_CALLING_BEST_PRACTICES.md  ANSI_COLOR_CODE_FIX.md  API_DOCUMENTATION.md  ARCHITECTURE_DIAGRAMS.md  ASSISTANT_UI_IMPLEMENTATION_COMPLETE.md  ASSISTANT_UI_PERSISTENCE_ANALYSIS.md  AUTO_START_INDEX.md  AUTO_START_SETUP.md  BETA_TESTING_GUIDE.md  BETA_USER_GUIDE.md  CICD_PIPELINE.md  COMPONENT_LIBRARY_STATUS.md  COPILOT_CUSTOM_INSTRUCTIONS_STATUS.md  COPILOT_INSTRUCTIONS_UPDATED.md  COPILOT_MCP_BRAVE_CONFIGURATION_GUIDE.md  CROSS_PLATFORM_VERIFICATION.md  CURRENT_STATUS.md  CUSTOM_PROMPT_ACTIVATED.md  CYBERPUNK_FOUNDATION_COMPLETE.md  CYBERPUNK_FOUNDATION_REVIEW_GUIDE.md  CYBERPUNK_THEME_TRANSFORMATION_PROGRESS.md  CYBERPUNK_TRANSFORMATION_NEXT_SESSION.md  DEPLOYMENT_GUIDE.md  DESIGN_REFERENCE_FUTURISTIC_DASHBOARD.md  DESIGN_SYSTEM_QUICK_REFERENCE_2025.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_2025.md  DOCUMENTATION_UPGRADE_MASTER_PLAN.md  ERROR_HANDLING_GUIDE.md  EXECUTIVE_SUMMARY_CYBERPUNK_FOUNDATION.md  FINAL_SESSION_SUMMARY.md  FINDING_COLLABORATORS.md  FL_STUDIO_PLUGIN_GUIDE.md  (+102 more)
examples/: README.md  distributed_audio_processing.py  main_enhanced.py
initdb.d/: 01-init.sql
plugins/: fl_studio_plugin.py  installer.py  plugin_interface.py
plugins/fl_studio/: BUILD.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  fl_studio_plugin.py
plugins/fl_studio/cpp/: samplemind_wrapper.cpp  samplemind_wrapper.h
samplemind-ai/: package-lock.json  package.json
samplemind-core/: README.md  requirements.txt
samplemind-web/: package-lock.json  package.json
scripts/: README_MCP_SETUP.md  SETUP_COMPLETE.sh  START_SERVERS.sh  audio_processor_cli.py  audit_database.py  benchmark.py  benchmark_audio.py  benchmark_database.py  benchmark_ml.py  benchmark_results.json  cleanup_docs.py  cleanup_project.sh  cloud_deploy.py  complete-github-setup.sh  configure-auto-start.sh  create_initial_issues.sh  create_test_audio.py  deep-system-cleanup.sh  demo_ai_integration.py  demo_audio_analysis.py  demo_batch_processing.py  demo_gemini_cli.py  docker-kali-pentest-setup.sh  fast-build.sh  fix_type_hints.py  install-git-hooks.sh  install-kilo-prompt.sh  install-nethunter-desktop.sh  install-plugins.sh  install-vicinae.sh  launch-ollama-api.sh  linux_setup.sh  loadtest-ollama-api.sh  macos_setup.sh  mcp-auto-start.sh  open-in-wsl.sh  performance-optimize.sh  polish_codebase.py  (+44 more)
(+1630 files in other folders)
