[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry]
name = "samplemind-ai"
version = "2.1.0-beta"
description = "AI-powered music production platform with intelligent sample analysis and organization"
authors = ["SampleMind Team <team@samplemind.ai>"]
readme = "README.md"
license = "MIT"
homepage = "https://samplemind.ai"
repository = "https://github.com/samplemind/samplemind-ai-v6"
documentation = "https://docs.samplemind.ai"
keywords = ["music", "ai", "audio", "samples", "production", "ml", "daw"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# Core dependencies
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"

# Audio processing
librosa = "0.10.1"
# basic-pitch = "^0.3.0"
soundfile = "^0.12.1"
audioread = "^3.0.1"
resampy = "^0.4.2"
scipy = "^1.11.4"
numpy = ">=1.26,<2.0.0"
numba = ">=0.59.0"

# AI and ML
torch = {version = "^2.1.0", source = "pytorch"}
torchaudio = {version = "^2.1.0", source = "pytorch"}
transformers = "^4.35.0"
sentence-transformers = "^2.2.2"
openai = "^1.3.0"
anthropic = "^0.7.0"
ollama = "^0.1.7"
google-generativeai = "^0.3.0"

# Audio Analysis & Processing Extensions
mido = "^1.3.0"  # MIDI file I/O

# Database
motor = "^3.3.1"  # MongoDB async driver
beanie = "^1.23.0"
redis = "^5.0.1"
chromadb = ">=0.5.0"

# Web framework
starlette = "^0.27.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
websockets = "^12.0"

# Authentication
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# CLI & TUI
click = "^8.1.7"
rich = "^13.7.0"
typer = "^0.9.0"
questionary = "^2.0.1"
textual = "^0.44.0"  # Modern TUI framework
textual-plotext = "^0.2.0"  # Plotting for TUI

# Utilities
psutil = "^5.9.0"
pyyaml = "^6.0"
boto3 = "^1.34.0"
celery = "^5.3.0"
sqlalchemy = "^2.0.0"
bleach = "^6.1.0"
mutagen = "^1.47.0"
python-magic = "^0.4.27"
aiohttp = "^3.9.0"
bcrypt = "^4.1.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
httpx = "^0.25.2"
aiofiles = "^23.2.1"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-xdist = "^3.4.0"

# Code quality
ruff = "^0.1.6"
black = "^23.11.0"
isort = "^5.12.0"
mypy = "^1.7.1"
bandit = {extras = ["toml"], version = "^1.7.5"}
safety = "^2.3.5"

# Development tools
pre-commit = "^3.5.0"
commitizen = "^3.12.0"

[tool.poetry.scripts]
samplemind = "src.interfaces.cli.main:app"
smai = "src.interfaces.cli.main:app"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=src", "--cov-report=term-missing"]
