[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry]
name = "samplemind-ai"
version = "2.1.0-beta"
description = "AI-powered music production platform with intelligent sample analysis and organization"
authors = ["SampleMind Team <team@samplemind.ai>"]
readme = "README.md"
license = "MIT"
homepage = "https://samplemind.ai"
repository = "https://github.com/lchtangen/SampleMind-AI---Beta"
documentation = "https://docs.samplemind.ai"
keywords = ["music", "ai", "audio", "samples", "production", "ml", "daw"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# ── Web framework ─────────────────────────────────────────────────────────────
fastapi = "^0.135.0"
uvicorn = { extras = ["standard"], version = "^0.41.0" }
starlette = "^0.46.0"
pydantic = { extras = ["email"], version = "^2.11.0" }
pydantic-settings = "^2.7.0"
jinja2 = "^3.1.6"
python-multipart = "^0.0.22"
websockets = ">=13.0,<15.0"

# ── AI Providers ──────────────────────────────────────────────────────────────
# Anthropic — PRIMARY (Claude 3.7 Sonnet + extended thinking)
anthropic = "^0.84.0"

# OpenAI — AGENTS / FALLBACK
# ⚠️ BREAKING: openai 2.x vs 1.x — openai_integration.py needs migration
openai = "^2.0.0"

# Google Gemini — FAST (genai.Client + aio.models.generate_content unchanged)
google-genai = "^1.56.0"

# Ollama — INSTANT / OFFLINE (no API key required)
ollama = "^0.4.0"

# Agent frameworks — LangChain 1.0 + LangGraph 1.0 stable releases
# ⚠️ BREAKING from 0.x — agents/ integration (P3, not yet written) needs LangGraph 1.x API
langgraph = "^1.0.0"
langchain-core = "^1.0.0"
openai-agents = "^0.0.5"

# ── Audio Processing ──────────────────────────────────────────────────────────
librosa = "^0.11.0"
basic-pitch = "^0.4.0"
soundfile = "^0.12.1"
audioread = "^3.0.1"
resampy = "^0.4.2"
scipy = "^1.14.0"
numpy = ">=2.0.0,<3.0.0"
numba = ">=0.59.0"
demucs = "^4.0.0"
pedalboard = "^0.9.0"
faster-whisper = "^1.1.0"
mido = "^1.3.0"
madmom = "^0.24.0"
pydub = "^0.25.1"

# ── ML / Deep Learning ────────────────────────────────────────────────────────
torch = { version = "^2.8.0", source = "pytorch" }
torchaudio = { version = "^2.8.0", source = "pytorch" }

# transformers 5.x NOT yet compatible with sentence-transformers 3.x — held at 4.x
# Revisit when sentence-transformers adds transformers 5.x support
transformers = "^4.47.0"

# ⚠️ BREAKING from 2.x: sentence-transformers 3.x API changes
sentence-transformers = "^3.0.0"

# ── Database ──────────────────────────────────────────────────────────────────
motor = "^3.6.0"
# ⚠️ BREAKING: beanie 2.x is a full ODM rewrite vs 1.x
beanie = "^2.0.0"
# ⚠️ BREAKING: redis 7.x has API changes vs 5.x
redis = "^7.0.0"
# ⚠️ BREAKING: chromadb 1.x HTTP-first architecture vs 0.6.x in-process
# core/database/chroma.py needs migration to new client API
chromadb = "^1.5.0"

# ── Authentication ────────────────────────────────────────────────────────────
python-jose = { extras = ["cryptography"], version = "^3.5.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

# ── CLI & TUI ─────────────────────────────────────────────────────────────────
click = "^8.1.7"
rich = "^14.0.0"
# ⚠️ BREAKING from 0.9.x: typer 0.12+ changed Optional param handling
# Review interfaces/cli/menu.py (~2255 lines) after upgrading
typer = "^0.21.0"
questionary = "^2.0.1"
textual = "^0.87.0"          # TUI screens pending ^0.87 migration — do not bump further yet
textual-plotext = "^0.2.0"

# ── Utilities ─────────────────────────────────────────────────────────────────
psutil = "^5.9.0"
pyyaml = "^6.0"
boto3 = "^1.42.0"
celery = "^5.6.0"
sqlalchemy = "^2.0.0"
bleach = "^6.1.0"
mutagen = "^1.47.0"
python-magic = "^0.4.27"
aiohttp = "^3.11.0"
# ⚠️ BREAKING: bcrypt 5.x has API changes vs 4.x
bcrypt = "^5.0.0"
python-dotenv = "^1.2.0"
loguru = "^0.7.3"
httpx = "^0.28.1"
aiofiles = "^25.1.0"          # calendar versioning: was 23.2.1
structlog = "^24.0.0"         # calendar versioning: was 23.2.0

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
# ⚠️ BREAKING: pytest-asyncio 1.x vs 0.x — asyncio_mode config may need updating
pytest-asyncio = "^1.0.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.0"
pytest-xdist = "^3.4.0"

# Code quality
ruff = "^0.15.0"
black = "^24.0.0"
isort = "^5.12.0"
mypy = "^1.14.0"
bandit = { extras = ["toml"], version = "^1.7.5" }
safety = "^2.3.5"

# Development tools
pre-commit = "^3.5.0"
commitizen = "^3.12.0"

[tool.poetry.scripts]
samplemind = "samplemind.interfaces.cli.menu:main"
smai = "samplemind.interfaces.cli.menu:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["--cov=src", "--cov-report=term-missing"]
