# ══════════════════════════════════════════════════════════════════════════════
# SampleMind AI — Project Configuration (pyproject.toml)
# ══════════════════════════════════════════════════════════════════════════════
#
# Central configuration for the Python package, dependencies, and all dev-tool
# settings (ruff, black, isort, mypy, pytest, coverage).
#
# Build system: Hatchling (PEP 517)
# Package manager: uv (lockfile: uv.lock)
# Install:  uv sync              (all deps)
#           uv sync --no-dev     (production only)
#           uv pip install -e .  (editable, pip-compatible)
# ══════════════════════════════════════════════════════════════════════════════

# ── Build system ─────────────────────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Project metadata (PEP 621) ───────────────────────────────────────────────
[project]
name = "samplemind-ai"
version = "0.3.0"
description = "AI-powered music production platform with intelligent sample analysis and organization"
authors = [{ name = "SampleMind Team", email = "team@samplemind.ai" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["music", "ai", "audio", "samples", "production", "ml", "daw"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]

# ── Runtime dependencies ─────────────────────────────────────────────────────
# All packages required at runtime.  Grouped by domain for readability.
dependencies = [
  # ── Web framework ────────────────────────────────────────────────────────
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "starlette>=0.41.0",
  "pydantic[email]>=2.10.0",
  "pydantic-settings>=2.7.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.18",
  "websockets>=13.0",

  # ── AI Providers ─────────────────────────────────────────────────────────
  # Anthropic — PRIMARY (Claude 3.7 Sonnet + extended thinking)
  "anthropic>=0.40.0",
  # OpenAI — AGENTS / FALLBACK
  "openai>=1.58.0",
  # Google Gemini — FAST
  "google-generativeai>=0.8.0",
  # Ollama — INSTANT / OFFLINE
  "ollama>=0.3.0",
  # Agent frameworks
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",

  # ── Audio Processing ──────────────────────────────────────────────────────
  "librosa>=0.11.0",
  "soundfile>=0.12.1",
  "audioread>=3.0.1",
  "resampy>=0.4.2",
  "scipy>=1.14.0",
  "numpy>=2.0.0,<3.0.0",
  "numba>=0.59.0",
  "demucs>=4.0.0",
  "pedalboard>=0.9.0",
  "faster-whisper>=1.1.0",
  "mido>=1.3.0",
  "pydub>=0.25.1",

  # ── ML / Deep Learning ────────────────────────────────────────────────────
  "torch>=2.2.2",
  "torchaudio>=2.2.2",
  "transformers>=4.39.3",
  "sentence-transformers>=2.6.1",

  # ── Database ──────────────────────────────────────────────────────────────
  "motor>=3.4.0",
  "beanie>=1.25.0",
  "redis>=5.0.1",
  "chromadb>=0.5.0",

  # ── Authentication ────────────────────────────────────────────────────────
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0.0",

  # ── CLI & TUI ─────────────────────────────────────────────────────────────
  "click>=8.1.7",
  "rich>=13.7.1",
  "typer>=0.12.3",
  "questionary>=2.0.1",
  "textual>=0.87.0",
  "sounddevice>=0.4.6",

  # ── Utilities ─────────────────────────────────────────────────────────────
  "psutil>=5.9.8",
  "pyyaml>=6.0.1",
  "boto3>=1.34.108",
  "celery>=5.3.6",
  "sqlalchemy>=2.0.29",
  "bleach>=6.1.0",
  "mutagen>=1.47.0",
  "python-magic>=0.4.27",
  "aiohttp>=3.9.5",
  "python-dotenv>=1.0.1",
  "loguru>=0.7.2",
  "httpx>=0.27.0",
  "aiofiles>=23.2.1",
  "structlog>=24.1.0",
  # ── New stack: Tortoise ORM + FAISS + LiteLLM + Supabase ─────────────────
  "tortoise-orm>=0.20.1",
  "aerich>=0.7.2",
  "faiss-cpu>=1.7.4",
  "litellm>=1.24.3",
  "supabase>=2.4.0",
  "xgboost>=2.0.3",
  "scikit-learn>=1.4.1",
  "uvloop>=0.19.0",
  "orjson>=3.9.15",
  "plotly>=5.22.0",
]

# ── Optional dependencies ────────────────────────────────────────────────────
# Extras that require special Python versions or GPU hardware.
[project.optional-dependencies]
# basic-pitch requires tensorflow<2.15.1 which has no Python 3.12 wheels.
# Install manually with Python 3.11 or use: uv pip install basic-pitch --python 3.11
midi = ["basic-pitch>=0.4.0"]

# ── CLI entry points ─────────────────────────────────────────────────────────
# After `pip install -e .` (or `uv sync`), these commands are on $PATH.
[project.scripts]
samplemind = "samplemind.interfaces.cli.menu:main"
smai = "samplemind.interfaces.cli.menu:main"

# ── Project links ────────────────────────────────────────────────────────────
[project.urls]
Homepage = "https://samplemind.ai"
Repository = "https://github.com/lchtangen/SampleMind-AI---Beta"
Documentation = "https://docs.samplemind.ai"

# ── Hatch build config ───────────────────────────────────────────────────────
# Tell Hatchling where the package source lives.
[tool.hatch.build.targets.wheel]
packages = ["src/samplemind"]

# ── Development dependency group ─────────────────────────────────────────────
# Installed with `uv sync` (included by default).  Test runners, linters,
# formatters, type checkers, and security scanners.
[dependency-groups]
dev = [
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pytest-xdist>=3.5.0",
  "pytest-timeout>=2.3.1",
  "pytest-randomly>=3.15.0",
  "pytest-sugar>=1.0.0",
  "pytest-watch>=4.2.0",
  "nox>=2024.4.15",
  "ruff>=0.5.3",
  "black>=24.3.0",
  "isort>=5.13.2",
  "mypy>=1.9.0",
  "bandit[toml]>=1.7.8",
  "safety>=3.0.1",
  "pre-commit>=3.7.0",
]

# ── uv configuration ─────────────────────────────────────────────────────────
# Custom index for CPU-only PyTorch wheels to avoid downloading GPU binaries.
[tool.uv]
constraint-dependencies = []

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_machine == 'x86_64'" }]
torchaudio = [
  { index = "pytorch-cpu", marker = "platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# ── Black (code formatter) ───────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py312"]

# ── isort (import sorter) ────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 88

# ── Ruff (linter + formatter, replaces flake8/pylint) ────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88

# ── Ruff lint rule selection ──────────────────────────────────────────────────
# E/W = pycodestyle, F = pyflakes, I = isort, B = bugbear, C4 = comprehensions,
# UP = pyupgrade.  Ignored rules have explanatory comments inline.
[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = [
    "E501",    # Line too long (conflicts with formatter)
    "B008",    # Function call in default argument (FastAPI Depends/File patterns)
    "B904",    # Raise within except (legitimate patterns in error handling)
    "B007",    # Unused loop variable (valid for intentional iteration)
    "E741",    # Ambiguous variable name (acceptable in some contexts)
    "F821",    # Undefined name (complex scoping issues, often in type annotations)
    "E402",    # Module import not at top (sometimes intentional for conditional imports)
    "B017",    # assert-raises-exception (test patterns)
    "F811",    # Redefined-while-unused (test fixtures, intentional shadowing)
    "B023",    # Function uses loop variable (valid in some contexts)
    "F402",    # Import shadowed by loop variable (rare edge case)
    "F823",    # Undefined local (edge cases in conditionals)
]

# ── Pytest configuration ─────────────────────────────────────────────────────
# asyncio_mode = "auto" so async test functions don't need @pytest.mark.asyncio.
# Coverage targets src/samplemind with branch tracking and HTML + XML reports.
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "--strict-markers",
  "--strict-config",
  "--verbose",
  "--tb=short",
  "--timeout=60",
  "--cov=src/samplemind",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
  "--cov-report=xml",
  "--cov-branch",
  "-ra",
]
filterwarnings = [
  "ignore::UserWarning",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
  "e2e: marks tests as end-to-end tests",
  "performance: marks tests as performance tests",
  "audio: marks tests that require audio processing",
  "ai: marks tests that require AI/ML models",
  "database: marks tests that require database connection",
  "external_api: marks tests that require external API calls",
  "cli: marks tests for CLI commands",
  "requires_api: marks tests that require API configuration",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# ── Coverage.py — run settings ───────────────────────────────────────────────
[tool.coverage.run]
source = ["src/samplemind"]
omit = ["*/tests/*", "*/__main__.py", "*/migrations/*"]
branch = true

# ── Coverage.py — report settings ────────────────────────────────────────────
# Lines matching these patterns are excluded from the "missing" count.
[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
show_missing = true

# ── Mypy (static type checker) ───────────────────────────────────────────────
# ignore_missing_imports = true because many audio/ML libs lack type stubs.
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
