[package]
name = "samplemind-desktop"
version = "0.3.0"
description = "SampleMind AI — Desktop App"
authors = ["SampleMind AI"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "samplemind_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "samplemind-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
